# VideoEditor

./: build.gradle.kts  gradlew
VideoCrop-2.0.0/: .gitattributes  .gitignore  gradle.properties  settings.gradle.kts
VideoCrop-2.0.0/app/src/main/res/drawable/: ic_deselect_24dp.xml  ic_market_24dp.xml  vector_home_24dp.xml  vector_messenger_24dp.xml  vector_search_normal_14dp.xml  vector_selection_remove_24dp.xml  vector_share_more_24dp.xml  vector_telegram_24dp.xml  vector_unchecked_20dp.xml  vector_youtube_24dp.xml
VideoCrop-2.0.0/app/src/main/res/layout/: activity_editor.xml  activity_gallery.xml  fragment_export_top_sheet.xml  fragment_main_editor.xml  fragment_media_selection_bottom_sheet.xml  view_holder_media_item.xml  view_holder_media_tab.xml
VideoCrop-2.0.0/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
VideoCrop-2.0.0/buildSrc/: build.gradle.kts
VideoCrop-2.0.0/common/: build.gradle.kts
VideoCrop-2.0.0/gradle/wrapper/: gradle-wrapper.properties
VideoCrop-2.0.0/indicatorseekbar/: build.gradle.kts
VideoCrop-2.0.0/indicatorseekbar/src/main/: AndroidManifest.xml
VideoCrop-2.0.0/llamaplayer/src/main/cpp/: native-lib.cpp
VideoCrop-2.0.0/timeline/: build.gradle.kts
VideoCrop-2.0.0/timeline/src/main/: AndroidManifest.xml
VideoCrop-2.0.0/videotimeline/: build.gradle
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: selector_tick_marks_color.xml
app/src/main/res/drawable/: ic_expand_less_24dp.xml  ic_expand_more_24dp.xml  ic_export_24dp.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_settings_24dp.xml  selector_smart_hdr_checkbox.xml  shape_camera_background.xml  vector_arrow_down_24dp.xml  vector_camera_24dp.xml  vector_checked_20dp.xml  vector_facebook_24dp.xml  vector_instagram_24dp.xml  vector_whatsapp_24dp.xml
app/src/main/res/layout/: fragment_export_progress.xml  fragment_export_share.xml  fragment_gallery_home.xml  fragment_gallery_local.xml  fragment_pixabay_search.xml  view_holder_media_selection.xml  view_holder_share_social_media.xml
app/src/main/res/navigation/: nav_editor.xml
app/src/main/res/values/: dimens.xml  styles.xml
app/src/main/res/xml/: fragment_pixabay_search_scene.xml
buildSrc/src/main/kotlin/: BuildVariables.kt
common/src/main/: AndroidManifest.xml
common/src/main/res/anim/: bottom_sheet_slide_in.xml
common/src/main/res/color/: color_high_emphasis_disable_enabled.xml  color_on_surface_disable_enabled.xml  color_primary_disable_enabled.xml  color_primary_on_surface_selected.xml  color_primary_surface_activated.xml  color_primary_surface_checked.xml
common/src/main/res/font/: barlow.xml  plus_jakarta_sans.xml
common/src/main/res/values/: attrs.xml  shape.xml  style.xml  type.xml
gradle/: libs.versions.toml
indicatorseekbar/src/main/res/color/: isb_selector_tick_marks_color.xml  isb_selector_tick_texts_color.xml
indicatorseekbar/src/main/res/drawable/: isb_indicator_rounded_corners.xml  isb_indicator_square_corners.xml
indicatorseekbar/src/main/res/values/: arrays.xml
llamaplayer/: build.gradle  consumer-rules.pro
llamaplayer/src/main/: AndroidManifest.xml
llamaplayer/src/main/cpp/: CMakeLists.txt  media_metadata_retriever.cpp
llamaplayer/src/main/cpp/decoder/: Decoder.h  DecoderBase.h  VideoReaderState.h
llamaplayer/src/main/cpp/decoder/video/: VideoDecoder.h
llamaplayer/src/main/cpp/olive/: audioparams.cpp  audioparams.h  color.h  rational.cpp  rational.h  samplebuffer.h
llamaplayer/src/main/cpp/opengl/: Core.h
llamaplayer/src/main/cpp/opengl/buffer/: Buffer.cpp  IndexBuffer.cpp  IndexBuffer.h
llamaplayer/src/main/cpp/opengl/fbo/: GlFrameBufferObject.cpp  GlFrameBufferObject.h
llamaplayer/src/main/cpp/opengl/filter/: GlFilter.h  GlFilterGroup.cpp  GlFrameInputFilter.h  GlTransformFilter.cpp  GlTransformFilter.h
llamaplayer/src/main/cpp/opengl/shader/: Shader.h
llamaplayer/src/main/cpp/opengl/texture/: Texture.h
llamaplayer/src/main/cpp/opengl/vertex_array/: VertexArray.h
llamaplayer/src/main/cpp/player/: NativePlayer.cpp  PlayerWrapper.cpp
llamaplayer/src/main/cpp/render/: VideoGLRender.h  VideoRender.h
llamaplayer/src/main/cpp/thumbnail/: VideoMetadata.cpp  VideoMetadataRetriever.cpp  VideoMetadataRetriever.h
llamaplayer/src/main/cpp/util/: GLUtils.h
videotimeline/src/main/res/drawable/: ic_transition_icon.xml  item_add_icon.xml
videotimeline/src/main/res/layout/: timeline_item_generalview.xml  videoitemlistview_item_joiner.xml  videoitemlistview_item_video.xml
videotimeline/src/main/res/values/: colors.xml
(+189 files in other folders)
